# ollama-rust-examples

./: Cargo.toml  cmds  readme.md  rustfmt.toml
.c04-data/: c04-embeddings-00.json  c04-embeddings-00.txt  c04-embeddings-01.json  c04-embeddings-01.txt  c04-embeddings-02.json  c04-embeddings-02.txt  c04-embeddings-03.json  c04-embeddings-03.txt  c04-embeddings-04.json  c04-embeddings-04.txt  c04-embeddings-05.json  c04-embeddings-05.txt  c04-embeddings-06.json  c04-embeddings-06.txt  c04-embeddings-07.json  c04-embeddings-07.txt  c04-embeddings-08.json  c04-embeddings-08.txt
_mock-data/: for-embeddings.txt
examples/: c01.rs  c02.rs  c02_ctx.json  c03-chat.rs  c04-embeddings.rs  c5-basic-chatbot.rs  c6-args.rs
src/: lib.rs
