[package]
name = "xp-ollama"
version = "0.1.0"
edition = "2021"


[dependencies]
bincode = "1.3.3"
derive_more = { version = "0.99.17", features = ["from"] }
futures = "0.3.30"
ollama-rs = { version = "0.1.9", features = ["stream"] }
simple-fs = { version = "0.1.3", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
